# gperftools-tutorial

./: README.md
gperftools/libunwind-0.99/: Makefile  Makefile.in  config.status
gperftools/libunwind-0.99/autom4te.cache/: output.0  traces.0  traces.1
gperftools/libunwind-0.99/doc/: common.tex
gperftools/libunwind-0.99/src/: Makefile  Makefile.in
gperftools/libunwind-0.99/tests/: Makefile  check-namespace.sh
output/include/gperftools/: tcmalloc.h
output/lib/: libprofiler.la  libtcmalloc.la  libtcmalloc.so.4.4.5  libtcmalloc_and_profiler.la  libtcmalloc_debug.la  libtcmalloc_debug.so.4  libtcmalloc_minimal.la  libtcmalloc_minimal.so.4  libtcmalloc_minimal_debug.la
output/lib/pkgconfig/: libprofiler.pc  libtcmalloc.pc  libtcmalloc_debug.pc  libtcmalloc_minimal.pc  libtcmalloc_minimal_debug.pc
output/share/doc/gperftools/: ChangeLog
src/libunwind-0.99/: aclocal.m4  configure  libtool
src/libunwind-0.99/autom4te.cache/: output.1  requests
src/libunwind-0.99/doc/: Makefile  Makefile.in
src/libunwind-0.99/include/: config.h  config.h.in
src/libunwind-0.99/tests/: Makefile.in
src/test-normal/: CMakeLists.txt  test-normal-profiler.cpp
src/test-server/: CMakeCache.txt  CMakeLists.txt  test-server-profiler.cpp  test-server.cpp
